# rag-ai-chatbot

./: .env.backend.template  .env.frontend.template  .gitignore  README.md  docker-compose.yml
.github/workflows/: docker-publish.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  main.py  routes.py  url_processor.py
backend/app/agents/: __init__.py  base_sales_agent.py  json_sales_agent.py  text_sales_agent.py
backend/app/db/: db_manager.py  schema.py
backend/tests/: conftest.py  test_json_sales_agent.py  test_manage_db.py  test_text_sales_agent.py  test_url_processor.py
frontend/: Dockerfile  README.md  package.json
frontend/public/: index.html
frontend/src/: App.tsx  consts.ts  index.tsx
frontend/src/components/: AppForm.tsx  index.tsx
frontend/src/components/ChatBox/: AIMessage.tsx  ChatBox.tsx  ChatBoxFooter.tsx  ChatBoxHeader.tsx  ChatBoxHistory.tsx  ChatBubble.tsx  ChatText.tsx  MessageType.ts  UserMessage.tsx
frontend/src/store/: apiSlice.ts  chatSlice.ts  store.ts  urlSlice.ts
